Cambio de header, borrado de pagina de servicios y agregado de animaciones

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,21 +16,23 @@
 
 <body>
     <!-- ----------------HEADER---------------- -->
+
     <header>
         <nav class="navBar">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../pages/about.html">Que es VANADIO</a></li>
-                <li><a href="../pages/proyectos.html">Proyectos</a></li>
-            </ul>
-            <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
-            <ul>
-                <li><a href="../pages/reel.html">Reel</a></li>
-                <li><a href="../pages/servicios.html">Servicios</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
+            <div class="CajaNav">
+                <a href="./about.html">Que es VANADIO</a>
+                <a href="./reel.html">Reel</a>
+            </div>
+            <a href="../index.html">
+                <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
+            </a>
+            <div class="CajaNav">
+                <a href="./proyectos.html">Proyectos</a>
+                <a href="#">Contacto</a>
+            </div>
         </nav>
     </header>
+
     <!-- ---------------/HEADER---------------- -->
     <!-- -----------------MAIN----------------- -->
     <main>
@@ -77,9 +79,12 @@
             <a href="https://youtube.com"><i class="fa-brands fa-youtube"></i></a>
         </div>
         <div class="logoFooter">
-            <img src="../media/logo_basic_white.png" alt="Vanadio Logo">
+            <a href="../index.html">
+                <img src="../media/logo_basic_white.png" alt="Vanadio Logo">
+            </a>
         </div>
-        <p>© VANADIO. Todos los derechos reservados. 2022.</p>
+        <p class="infoFooterGrande">© VANADIO. Todos los derechos reservados. 2022.</p>
+        <p class="infoFooterChico">© VANADIO.</p>
     </footer>
 
     <!-- ---------------/FOOTER---------------- -->
