--- a/index.html
+++ b/index.html
@@ -16,28 +16,35 @@
 
 <body>
     <div class="gridContainer">
+
         <!-- ----------------HEADER---------------- -->
+
         <header>
             <nav class="navBar">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="pages/about.html">Que es VANADIO</a></li>
-                    <li><a href="pages/proyectos.html">Proyectos</a></li>
-                </ul>
-                <img class="logoNav" src="./media/logo_basic_white.png" alt="Vanadio Logo">
-                <ul>
-                    <li><a href="pages/reel.html">Reel</a></li>
-                    <li><a href="pages/servicios.html">Servicios</a></li>
-                    <li><a href="pages/contacto.html">Contacto</a></li>
-                </ul>
+                <div class="CajaNav">
+                    <a href="./pages/about.html">Que es VANADIO</a>
+                    <a href="./pages/reel.html">Reel</a>
+                </div>
+                <a href="#">
+                    <img class="logoNav" src="./media/logo_basic_white.png" alt="Vanadio Logo">
+                </a>
+                <div class="CajaNav">
+                    <a href="./pages/proyectos.html">Proyectos</a>
+                    <a href="./pages/contacto.html">Contacto</a>
+                </div>
             </nav>
         </header>
+
         <!-- ---------------/HEADER---------------- -->
         <!-- ----------------PORTADA--------------- -->
+        
         <img class="portada" src="media/vanadioav_Portada.jpg" alt="Foto Portada">
+
         <!-- ---------------/PORTADA--------------- -->
         <!-- -----------------MAIN----------------- -->
+
         <main>
+
             <!-- ----------------RESUMEN--------------- -->
 
             <h1>VANADIO</h1>
@@ -55,10 +62,13 @@
 
             <!-- ------------/ÚLTIMO VIDEO------------- -->
             <!-- ---------------SLIDESHOW-------------- -->
+
             <section class="slideshow">
                 <img class="imgSlideshow" src="media/vanadioav_Slideshow.jpg" alt="Slideshow Fotos">
             </section>
+
             <!-- --------------/SLIDESHOW-------------- -->
+
         </main>
 
         <!-- ----------------/MAIN----------------- -->
@@ -73,7 +83,9 @@
                 <a href="https://youtube.com"><i class="fa-brands fa-youtube"></i></a>
             </div>
             <div class="logoFooter">
-                <img src="./media/logo_basic_white.png" alt="Vanadio Logo">
+                <a href="#">
+                    <img src="./media/logo_basic_white.png" alt="Vanadio Logo">
+                </a>
             </div>
             <p class="infoFooterGrande">© VANADIO. Todos los derechos reservados. 2022.</p>
             <p class="infoFooterChico">© VANADIO.</p>
