--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,7 +22,7 @@
         <!-- ----------------HEADER---------------- -->
 
         <header>
-            <nav class="navBar">
+            <nav class="navBarWide">
                 <div class="CajaNav">
                     <a href="./pages/about.html">Que es VANADIO</a>
                     <a href="./pages/reel.html">Reel</a>
@@ -33,11 +35,38 @@
                     <a href="./pages/contacto.html">Contacto</a>
                 </div>
             </nav>
+            <nav class="navbar navBarSmall navbar-expand-sm  navbar-dark">
+                <div class="container-fluid">
+                    <a href="#">
+                        <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapsibleNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/about.html">Que es VANADIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/reel.html">Reel</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/proyectos.html">Proyectos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </header>
 
         <!-- ---------------/HEADER---------------- -->
         <!-- ----------------PORTADA--------------- -->
-        
+
         <img class="portada" src="media/vanadioav_Portada.jpg" alt="Foto Portada">
 
         <!-- ---------------/PORTADA--------------- -->
@@ -63,9 +92,59 @@
             <!-- ------------/ÚLTIMO VIDEO------------- -->
             <!-- ---------------SLIDESHOW-------------- -->
 
-            <section class="slideshow">
-                <img class="imgSlideshow" src="media/vanadioav_Slideshow.jpg" alt="Slideshow Fotos">
-            </section>
+            <!-- Carousel -->
+            <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+                <!-- Indicators/dots -->
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="5"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="6"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="7"></button>
+                </div>
+
+                <!-- The slideshow/carousel -->
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./media/Frames/Portada Juli Manfredi.png" alt="Portada Juli Manfredi"
+                            class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./media/Frames/la Trifulca amanece 1.png" alt="La Trifulca" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./media/Frames/Denegado.png" alt="Denegado" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./media/Frames/Robert Mentira.png" alt="Robert Mentira" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./media/Frames/Distancia Paralela.png" alt="Distancia Paralela" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./media/Frames/Pampa Trash 4.png" alt="Pampa Trash" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./media/Frames/RIA 2 1.png" alt="RIA 2" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./media/Frames/Portada Guada backstage.png" alt="Guada backstage"
+                            class="d-block w-100">
+                    </div>
+                </div>
+
+                <!-- Left and right controls/icons -->
+                <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+            </div>
 
             <!-- --------------/SLIDESHOW-------------- -->
 
@@ -97,6 +176,15 @@
             <i class="fa-solid fa-square-caret-up"></i>
         </a>
     </div>
+
+    <!-- ---------------BOOTSTRAP---------------- -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+
+    <!-- --------------/BOOTSTRAP---------------- -->
+
 </body>
 
 </html>
