--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,7 +21,7 @@
         <!-- ----------------HEADER---------------- -->
 
         <header>
-            <nav class="navBar">
+            <nav class="navBarWide">
                 <div class="CajaNav">
                     <a href="#">Que es VANADIO</a>
                     <a href="./reel.html">Reel</a>
@@ -30,6 +32,33 @@
                 <div class="CajaNav">
                     <a href="./proyectos.html">Proyectos</a>
                     <a href="./contacto.html">Contacto</a>
+                </div>
+            </nav>
+            <nav class="navbar navBarSmall navbar-expand-sm  navbar-dark">
+                <div class="container-fluid">
+                    <a href="#">
+                        <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapsibleNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/about.html">Que es VANADIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/reel.html">Reel</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/proyectos.html">Proyectos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </header>
@@ -82,6 +111,32 @@
                 </section>
             </div>
             <div class="secundario">
+                <div class="card colaborador" style="width:400px">
+                    <img class="card-img-top" src="../media/nacho.jpg" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">Ignacio 'Nachulio' Acuña</h4>
+                        <p class="card-text">Colaborador frecuente. Camarógrafo secundario.</p>
+                    </div>
+                </div>
+                <div class="card colaborador" style="width:400px">
+                    <img class="card-img-top" src="../media/nacho.jpg" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">Ignacio 'Nachulio' Acuña</h4>
+                        <p class="card-text">Colaborador frecuente. Camarógrafo secundario.</p>
+                    </div>
+                </div>
+                <div class="card colaborador" style="width:400px">
+                    <img class="card-img-top" src="../media/nacho.jpg" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">Ignacio 'Nachulio' Acuña</h4>
+                        <p class="card-text">Colaborador frecuente. Camarógrafo secundario.</p>
+                    </div>
+                </div>
+<!--                 <section class="colaborador">
+                    <img src="../media/nacho.jpg" alt="Foto Colaborador 3">
+                    <h4>Ignacio 'Nachulio' Acuña </h4>
+                    <p>Colaborador frecuente. Camarógrafo secundario.</p>
+                </section>
                 <section class="colaborador">
                     <img src="../media/nacho.jpg" alt="Foto Colaborador 1">
                     <h4>Ignacio 'Nachulio' Acuña </h4>
@@ -91,12 +146,7 @@
                     <img src="../media/nacho.jpg" alt="Foto Colaborador 2">
                     <h4>Ignacio 'Nachulio' Acuña </h4>
                     <p>Colaborador frecuente. Camarógrafo secundario. </p>
-                </section>
-                <section class="colaborador">
-                    <img src="../media/nacho.jpg" alt="Foto Colaborador 3">
-                    <h4>Ignacio 'Nachulio' Acuña </h4>
-                    <p>Colaborador frecuente. Camarógrafo secundario. </p>
-                </section>
+                </section> -->
             </div>
 
             <!-- ------------/QUIENES SOMOS------------ -->
@@ -128,6 +178,15 @@
             <i class="fa-solid fa-square-caret-up"></i>
         </a>
     </div>
+
+    <!-- ---------------BOOTSTRAP---------------- -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+
+    <!-- --------------/BOOTSTRAP---------------- -->
+
 </body>
 
 </html>
