full responsive index.html y about.html. Limpiado de css de about

--- a/index.html
+++ b/index.html
@@ -20,22 +20,29 @@
     <div class="gridContainer">
 
         <!-- ----------------HEADER---------------- -->
-
+        
         <header>
+
+            <!-- ----------------NAVBAR WIDE---------------- -->
+
             <nav class="navBarWide">
                 <div class="CajaNav">
                     <a href="./pages/about.html">Que es VANADIO</a>
                     <a href="./pages/reel.html">Reel</a>
                 </div>
                 <a href="#">
-                    <img class="logoNav" src="./media/logo_basic_white.png" alt="Vanadio Logo">
+                    <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
                 </a>
                 <div class="CajaNav">
                     <a href="./pages/proyectos.html">Proyectos</a>
                     <a href="./pages/contacto.html">Contacto</a>
                 </div>
             </nav>
-            <nav class="navbar navBarSmall navbar-expand-sm  navbar-dark">
+
+            <!-- ---------------/NAVBAR WIDE---------------- -->
+            <!-- ---------------NAVBAR SMALL---------------- -->
+
+            <nav class="navbar navBarSmall navbar-expand-sm navbar-dark">
                 <div class="container-fluid">
                     <a href="#">
                         <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
@@ -62,6 +69,9 @@
                     </div>
                 </div>
             </nav>
+
+            <!-- ---------------/NAVBAR SMALL--------------- -->
+
         </header>
 
         <!-- ---------------/HEADER---------------- -->
