--- a/pages/about.html
+++ b/pages/about.html
@@ -18,9 +18,13 @@
 
 <body>
     <div class="gridContainer">
+
         <!-- ----------------HEADER---------------- -->
 
         <header>
+
+            <!-- ----------------NAVBAR WIDE---------------- -->
+
             <nav class="navBarWide">
                 <div class="CajaNav">
                     <a href="#">Que es VANADIO</a>
@@ -34,9 +38,13 @@
                     <a href="./contacto.html">Contacto</a>
                 </div>
             </nav>
-            <nav class="navbar navBarSmall navbar-expand-sm  navbar-dark">
+
+            <!-- ---------------/NAVBAR WIDE---------------- -->
+            <!-- ---------------NAVBAR SMALL---------------- -->
+
+            <nav class="navbar navBarSmall navbar-expand-sm navbar-dark">
                 <div class="container-fluid">
-                    <a href="#">
+                    <a href="../index.html">
                         <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -46,28 +54,34 @@
                     <div class="collapse navbar-collapse" id="collapsibleNavbar">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/about.html">Que es VANADIO</a>
+                                <a class="nav-link" href="#">Que es VANADIO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/reel.html">Reel</a>
+                                <a class="nav-link" href="./reel.html">Reel</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/proyectos.html">Proyectos</a>
+                                <a class="nav-link" href="./proyectos.html">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                                <a class="nav-link" href="./contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
+
+            <!-- ---------------/NAVBAR SMALL--------------- -->
+
         </header>
 
         <!-- ---------------/HEADER---------------- -->
         <!-- -----------------MAIN----------------- -->
-        <!-- ------------QUE ES VANADIO------------ -->
-        <main class="bodyMain">
+
+        <main>
             <div class="bloquesInfo">
+
+                <!-- ------------QUE ES VANADIO------------ -->
+
                 <section class="bloqueIndiv">
                     <h2>Que significa VANADIO?</h2>
                     <p>El Vanadio es un elemento químico de la tabla periódica que toma su nombre de Vanadis, la diosa
@@ -87,21 +101,25 @@
                         de ellas no existe por sí sola sino en conjunto con las demás.</p>
                     </p>
                 </section>
+
                 <!-- -----------/QUE ES VANADIO------------ -->
                 <!-- --------------QUE HACEMOS------------- -->
+
                 <section class="bloqueIndiv">
                     <h2>A que nos dedicamos?</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio ex odit vitae facere quaerat.
-                        Consequuntur
-                        laboriosam iure repellat aperiam maiores error at. Eligendi, eaque.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut architecto ratione ipsa dolorum
-                        aperiam,
-                        odit
-                        eveniet placeat mollitia maxime quisquam.</p>
+                    <p>Vanadio Audiovisuales es una productora audiovisual con sede en Buenos Aires. De carácter
+                        transeccional, destaca por su foco en la captura de imágenes de alto impacto y el registro de
+                        eventos de importancia única.</p>
+                    <p>Priorizamos las individualidades y las ideas, por lo que dirigimos nuestra práctica hacia
+                        momentos de importancia de las personas y la materialización de sus proyectos personales.</p>
                 </section>
+
+                <!-- -------------/QUE HACEMOS------------- -->
+
             </div>
-            <!-- -------------/QUE HACEMOS------------- -->
+
             <!-- -------------QUIENES SOMOS------------ -->
+
             <h2 class="tituloIntegrantes">Quienes conforman VANADIO</h2>
             <div class="principal">
                 <section class="fundador">
@@ -111,32 +129,6 @@
                 </section>
             </div>
             <div class="secundario">
-                <div class="card colaborador" style="width:400px">
-                    <img class="card-img-top" src="../media/nacho.jpg" alt="Card image">
-                    <div class="card-body">
-                        <h4 class="card-title">Ignacio 'Nachulio' Acuña</h4>
-                        <p class="card-text">Colaborador frecuente. Camarógrafo secundario.</p>
-                    </div>
-                </div>
-                <div class="card colaborador" style="width:400px">
-                    <img class="card-img-top" src="../media/nacho.jpg" alt="Card image">
-                    <div class="card-body">
-                        <h4 class="card-title">Ignacio 'Nachulio' Acuña</h4>
-                        <p class="card-text">Colaborador frecuente. Camarógrafo secundario.</p>
-                    </div>
-                </div>
-                <div class="card colaborador" style="width:400px">
-                    <img class="card-img-top" src="../media/nacho.jpg" alt="Card image">
-                    <div class="card-body">
-                        <h4 class="card-title">Ignacio 'Nachulio' Acuña</h4>
-                        <p class="card-text">Colaborador frecuente. Camarógrafo secundario.</p>
-                    </div>
-                </div>
-<!--                 <section class="colaborador">
-                    <img src="../media/nacho.jpg" alt="Foto Colaborador 3">
-                    <h4>Ignacio 'Nachulio' Acuña </h4>
-                    <p>Colaborador frecuente. Camarógrafo secundario.</p>
-                </section>
                 <section class="colaborador">
                     <img src="../media/nacho.jpg" alt="Foto Colaborador 1">
                     <h4>Ignacio 'Nachulio' Acuña </h4>
@@ -146,10 +138,16 @@
                     <img src="../media/nacho.jpg" alt="Foto Colaborador 2">
                     <h4>Ignacio 'Nachulio' Acuña </h4>
                     <p>Colaborador frecuente. Camarógrafo secundario. </p>
-                </section> -->
+                </section>
+                <section class="colaborador">
+                    <img src="../media/nacho.jpg" alt="Foto Colaborador 3">
+                    <h4>Ignacio 'Nachulio' Acuña </h4>
+                    <p>Colaborador frecuente. Camarógrafo secundario.</p>
+                </section>
             </div>
 
             <!-- ------------/QUIENES SOMOS------------ -->
+
         </main>
 
         <!-- ----------------/MAIN----------------- -->
