typo en index, logo de header mal ruteado. sin otro cambio

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="./pages/reel.html">Reel</a>
                 </div>
                 <a href="#">
-                    <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
+                    <img class="logoNav" src="./media/logo_basic_white.png" alt="Vanadio Logo">
                 </a>
                 <div class="CajaNav">
                     <a href="./pages/proyectos.html">Proyectos</a>
