otro typo en index arreglado, mismo que anterior pero en navbar chica

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <nav class="navbar navBarSmall navbar-expand-sm navbar-dark">
                 <div class="container-fluid">
                     <a href="#">
-                        <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
+                        <img class="logoNav" src="./media/logo_basic_white.png" alt="Vanadio Logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapsibleNavbar">
