agregado de sass a about.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../media/logo_basic_white.png" type="image/x-icon">
     <title>VANADIO - About</title>
 </head>
