update de about: mejorado sass y casi full responsive

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="gridContainer">
+    <div class="gridContainerGeneral">
 
         <!-- ----------------HEADER---------------- -->
 
@@ -42,7 +42,7 @@
             <!-- ---------------/NAVBAR WIDE---------------- -->
             <!-- ---------------NAVBAR SMALL---------------- -->
 
-            <nav class="navbar navBarSmall navbar-expand-sm navbar-dark">
+            <nav class="navbar navbar-expand-sm navbar-dark">
                 <div class="container-fluid">
                     <a href="../index.html">
                         <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
@@ -156,18 +156,18 @@
 
         <footer>
             <div class="iconosRedes">
-                <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.facebook.com/VanadioAV"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/vanadioav/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://vimeo.com/vanadioav"><i class="fa-brands fa-vimeo"></i></a>
+                <a href="https://www.flickr.com/photos/vanadioav"><i class="fa-brands fa-flickr"></i></a>
             </div>
             <div class="logoFooter">
                 <a href="../index.html">
                     <img src="../media/logo_basic_white.png" alt="Vanadio Logo">
                 </a>
             </div>
-            <p class="infoFooterGrande">© VANADIO. Todos los derechos reservados. 2022.</p>
-            <p class="infoFooterChico">© VANADIO.</p>
+            <div class="infoFooter"><span>© VANADIO 2022.</span></div>
         </footer>
 
         <!-- ---------------/FOOTER---------------- -->
