--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- ----------------HEADER---------------- -->
-
+    <div class="gridContainerGeneral">
     <header>
         <nav class="navBar">
             <div class="CajaNav">
@@ -75,6 +75,7 @@
     <a href="#" class="subir">
         <i class="fa-solid fa-square-caret-up"></i>
     </a>
+</div>
 </body>
 
 </html>
