--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./media/logo_basic_white.png" type="image/x-icon">
     <title>VANADIO - Home</title>
 </head>
 
 <body>
-    <div class="gridContainer">
+    <div class="gridContainerIndex">
 
         <!-- ----------------HEADER---------------- -->
         
@@ -42,7 +42,7 @@
             <!-- ---------------/NAVBAR WIDE---------------- -->
             <!-- ---------------NAVBAR SMALL---------------- -->
 
-            <nav class="navbar navBarSmall navbar-expand-sm navbar-dark">
+            <nav class="navbar navbar-expand-sm navbar-dark">
                 <div class="container-fluid">
                     <a href="#">
                         <img class="logoNav" src="./media/logo_basic_white.png" alt="Vanadio Logo">
@@ -166,18 +166,18 @@
 
         <footer>
             <div class="iconosRedes">
-                <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.facebook.com/VanadioAV"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/vanadioav/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://vimeo.com/vanadioav"><i class="fa-brands fa-vimeo"></i></a>
+                <a href="https://www.flickr.com/photos/vanadioav"><i class="fa-brands fa-flickr"></i></a>
             </div>
             <div class="logoFooter">
-                <a href="#">
-                    <img src="./media/logo_basic_white.png" alt="Vanadio Logo">
+                <a href="../index.html">
+                    <img src="../media/logo_basic_white.png" alt="Vanadio Logo">
                 </a>
             </div>
-            <p class="infoFooterGrande">© VANADIO. Todos los derechos reservados. 2022.</p>
-            <p class="infoFooterChico">© VANADIO.</p>
+            <div class="infoFooter"><span>© VANADIO 2022.</span></div>
         </footer>
 
         <!-- ---------------/FOOTER---------------- -->
