--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="gridContainer">
+    <div class="gridContainerGeneral">
         <!-- ----------------HEADER---------------- -->
 
         <header>
