--- a/pages/reel.html
+++ b/pages/reel.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="gridContainer">
+    <div class="gridContainerGeneral">
     <!-- ----------------HEADER---------------- -->
 
     <header>
