--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="description" content="VANADIO es una productora audiovisual con base en Buenos Aires, Argentina. Nos dedicamos a la creacion de contenido del tipo de videoclips y timelapse para clientes exigentes y que quieran poseer una impronta unica es sus trabajos y proyectos">
+    <meta name="keywords" content="audiovisual, vanadio, productora, argentina, imagen, imagenes, audio, video, camara, sonido, videos, videoclip, creador de contenido, grabacion, filmacion, timelapse, slow motion">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -13,7 +15,7 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./media/logo_basic_white.png" type="image/x-icon">
-    <title>VANADIO - Home</title>
+    <title>VANADIO Audiovisuales - Productora Audiovisual Argentina</title>
 </head>
 
 <body>
@@ -87,7 +89,7 @@
             <!-- ----------------RESUMEN--------------- -->
 
             <h1>VANADIO</h1>
-            <h2 class="subtituloVanadio">Proyectos Audiovisuales</h2>
+            <h2 class="subtituloVanadio">Audiovisuales</h2>
             <p class="descripcionVanadio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, debitis minus
                 recusandae culpa totam itaque explicabo voluptatum nesciunt, tempora modi, hic est. Laboriosam.</p>
 
