--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="description" content="VANADIO es una productora audiovisual con base en Buenos Aires, Argentina. Nos dedicamos a la creacion de contenido del tipo de videoclips y timelapse para clientes exigentes y que quieran poseer una impronta unica es sus trabajos y proyectos">
+    <meta name="keywords" content="audiovisual, vanadio, productora, argentina, imagen, imagenes, audio, video, camara, sonido, videos, videoclip, creador de contenido, grabacion, filmacion, timelapse, slow motion">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/proyectos.css">
     <link rel="shortcut icon" href="../media/logo_basic_white.png" type="image/x-icon">
-    <title>VANADIO - About</title>
+    <title>VANADIO Audiovisuales - Proyectos realizados hasta la fecha | Nuestros trabajos</title>
 </head>
 
 <body>
