pasado a scss todas las paginas. responsive de todas las paginas excepto proyectos.html. Segun cliente se cambiaron iconos de footer, se borró frase en el index y titulos en reel y proyectos

--- a/pages/about.html
+++ b/pages/about.html
@@ -80,7 +80,7 @@
         <!-- -----------------MAIN----------------- -->
 
         <main>
-            <div class="bloquesInfo">
+            <div class="bloqueAbout">
 
                 <!-- ------------QUE ES VANADIO------------ -->
 
