--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,16 +13,20 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/contacto.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../media/logo_basic_white.png" type="image/x-icon">
     <title>VANADIO - Como comunicarse con nosotros | Contáctanos</title>
 </head>
 
 <body>
     <div class="gridContainerGeneral">
+
         <!-- ----------------HEADER---------------- -->
 
         <header>
+
+            <!-- ----------------NAVBAR WIDE---------------- -->
+
             <nav class="navBarWide">
                 <div class="CajaNav">
                     <a href="./about.html">Que es VANADIO</a>
@@ -36,7 +40,11 @@
                     <a href="#">Contacto</a>
                 </div>
             </nav>
-            <nav class="navbar navBarSmall navbar-expand-sm  navbar-dark">
+
+            <!-- ---------------/NAVBAR WIDE---------------- -->
+            <!-- ---------------NAVBAR SMALL---------------- -->
+
+            <nav class="navbar navbar-expand-sm navbar-dark">
                 <div class="container-fluid">
                     <a href="../index.html">
                         <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
@@ -63,12 +71,15 @@
                     </div>
                 </div>
             </nav>
+
+            <!-- ---------------/NAVBAR SMALL--------------- -->
+
         </header>
 
         <!-- ---------------/HEADER---------------- -->
         <!-- -----------------MAIN----------------- -->
         <main>
-            <div class="bloques">
+            <div class="bloqueContacto">
                 <section class="bloqueInfo">
                     <h2>Queres contactarte con vanadio?</h2>
                     <h2>Llená el siguiente formulario!</h2>
@@ -107,18 +118,18 @@
 
         <footer>
             <div class="iconosRedes">
-                <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.facebook.com/VanadioAV"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/vanadioav/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://vimeo.com/vanadioav"><i class="fa-brands fa-vimeo"></i></a>
+                <a href="https://www.flickr.com/photos/vanadioav"><i class="fa-brands fa-flickr"></i></a>
             </div>
             <div class="logoFooter">
                 <a href="../index.html">
                     <img src="../media/logo_basic_white.png" alt="Vanadio Logo">
                 </a>
             </div>
-            <p class="infoFooterGrande">© VANADIO. Todos los derechos reservados. 2022.</p>
-            <p class="infoFooterChico">© VANADIO.</p>
+            <div class="infoFooter"><span>© VANADIO 2022.</span></div>
         </footer>
 
         <!-- ---------------/FOOTER---------------- -->
@@ -126,8 +137,8 @@
         <a href="#" class="subir">
             <i class="fa-solid fa-square-caret-up"></i>
         </a>
-        
     </div>
+
     <!-- ---------------BOOTSTRAP---------------- -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
