--- a/pages/reel.html
+++ b/pages/reel.html
@@ -7,41 +7,80 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta name="description" content="VANADIO es una productora audiovisual con base en Buenos Aires, Argentina. Nos dedicamos a la creacion de contenido del tipo de videoclips y timelapse para clientes exigentes y que quieran poseer una impronta unica es sus trabajos y proyectos">
     <meta name="keywords" content="audiovisual, vanadio, productora, argentina, imagen, imagenes, audio, video, camara, sonido, videos, videoclip, creador de contenido, grabacion, filmacion, timelapse, slow motion">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/reel.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../media/logo_basic_white.png" type="image/x-icon">
     <title>VANADIO Audiovisuales - Nuestro reel | Video resumen de proyectos</title>
 </head>
 
 <body>
     <div class="gridContainerGeneral">
-    <!-- ----------------HEADER---------------- -->
 
-    <header>
-        <nav class="navBar">
-            <div class="CajaNav">
-                <a href="./about.html">Que es VANADIO</a>
-                <a href="#">Reel</a>
-            </div>
-            <a href="../index.html">
-                <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
-            </a>
-            <div class="CajaNav">
-                <a href="./proyectos.html">Proyectos</a>
-                <a href="./contacto.html">Contacto</a>
-            </div>
-        </nav>
-    </header>
+        <!-- ----------------HEADER---------------- -->
 
-    <!-- ---------------/HEADER---------------- -->
+        <header>
+
+            <!-- ----------------NAVBAR WIDE---------------- -->
+
+            <nav class="navBarWide">
+                <div class="CajaNav">
+                    <a href="./about.html">Que es VANADIO</a>
+                    <a href="#">Reel</a>
+                </div>
+                <a href="../index.html">
+                    <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
+                </a>
+                <div class="CajaNav">
+                    <a href="./proyectos.html">Proyectos</a>
+                    <a href="./contacto.html">Contacto</a>
+                </div>
+            </nav>
+
+            <!-- ---------------/NAVBAR WIDE---------------- -->
+            <!-- ---------------NAVBAR SMALL---------------- -->
+
+            <nav class="navbar navbar-expand-sm navbar-dark">
+                <div class="container-fluid">
+                    <a href="../index.html">
+                        <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapsibleNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="./about.html">Que es VANADIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Reel</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./proyectos.html">Proyectos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+            <!-- ---------------/NAVBAR SMALL--------------- -->
+
+        </header>
+
+        <!-- ---------------/HEADER---------------- -->
         <!-- -----------------MAIN----------------- -->
 
-        <main class="bodyMain">
-            <h2>Reel Vanadio</h2>
-            <section class="video">
+        <main>
+            <section class="videoReel">
                 <iframe src="https://www.youtube.com/embed/zgsIAtn8zSY" title="Reel-Vanadio-Audiovisuales" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
@@ -54,18 +93,18 @@
 
         <footer>
             <div class="iconosRedes">
-                <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.facebook.com/VanadioAV"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/vanadioav/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://vimeo.com/vanadioav"><i class="fa-brands fa-vimeo"></i></a>
+                <a href="https://www.flickr.com/photos/vanadioav"><i class="fa-brands fa-flickr"></i></a>
             </div>
             <div class="logoFooter">
                 <a href="../index.html">
                     <img src="../media/logo_basic_white.png" alt="Vanadio Logo">
                 </a>
             </div>
-            <p class="infoFooterGrande">© VANADIO. Todos los derechos reservados. 2022.</p>
-            <p class="infoFooterChico">© VANADIO.</p>
+            <div class="infoFooter"><span>© VANADIO 2022.</span></div>
         </footer>
 
         <!-- ---------------/FOOTER---------------- -->
@@ -74,6 +113,15 @@
             <i class="fa-solid fa-square-caret-up"></i>
         </a>
     </div>
+    
+    <!-- ---------------BOOTSTRAP---------------- -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+
+    <!-- --------------/BOOTSTRAP---------------- -->
+
 </body>
 
 </html>
