cambio de descripcion en todas las paginas. correcion de mal linkeo de logo de footer

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
             <div class="logoFooter">
                 <a href="../index.html">
-                    <img src="../media/logo_basic_white.png" alt="Vanadio Logo">
+                    <img src="./media/logo_basic_white.png" alt="Vanadio Logo">
                 </a>
             </div>
             <div class="infoFooter"><span>© VANADIO 2022.</span></div>
