--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <meta name="description" content="VANADIO es una productora audiovisual con base en Buenos Aires, Argentina. Nos dedicamos a la creacion de contenido del tipo de videoclips y timelapse para clientes exigentes y que quieran poseer una impronta unica es sus trabajos y proyectos">
+    <meta name="description" content="Podes contactarte con VANADIO audiovisuales para pedir un presupuesto, contarnos sobre tu idea, mostrarnos tus proyectos o incluso si queres formar parte de nuestro equipo!">
     <meta name="keywords" content="audiovisual, vanadio, productora, argentina, imagen, imagenes, audio, video, camara, sonido, videos, videoclip, creador de contenido, grabacion, filmacion, timelapse, slow motion">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
