--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta name="description"
-        content="VANADIO es una productora audiovisual con base en Buenos Aires, Argentina. Nos dedicamos a la creacion de contenido del tipo de videoclips y timelapse para clientes exigentes y que quieran poseer una impronta unica es sus trabajos y proyectos">
+        content="Nuestros proyectos estan dividos en subcategorias, desde timelapses a videoclips. Acá podes encontrar todos los trabajos realizados por VANADIO audiovisuales.">
     <meta name="keywords"
         content="audiovisual, vanadio, productora, argentina, imagen, imagenes, audio, video, camara, sonido, videos, videoclip, creador de contenido, grabacion, filmacion, timelapse, slow motion">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
