--- a/index.html
+++ b/index.html
@@ -120,29 +120,29 @@
                 <!-- The slideshow/carousel -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./media/Frames/Portada Juli Manfredi.png" alt="Portada Juli Manfredi"
+                        <img src="./media/Frames Slideshow/Slideshow01.png" alt="Portada Juli Manfredi"
                             class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./media/Frames/la Trifulca amanece 1.png" alt="La Trifulca" class="d-block w-100">
+                        <img src="./media/Frames Slideshow/Slideshow02.png" alt="La Trifulca" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./media/Frames/Denegado.png" alt="Denegado" class="d-block w-100">
+                        <img src="./media/Frames Slideshow/Slideshow03.png" alt="Denegado" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./media/Frames/Robert Mentira.png" alt="Robert Mentira" class="d-block w-100">
+                        <img src="./media/Frames Slideshow/Slideshow04.png" alt="Robert Mentira" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./media/Frames/Distancia Paralela.png" alt="Distancia Paralela" class="d-block w-100">
+                        <img src="./media/Frames Slideshow/Slideshow05.png" alt="Distancia Paralela" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./media/Frames/Pampa Trash 4.png" alt="Pampa Trash" class="d-block w-100">
+                        <img src="./media/Frames Slideshow/Slideshow06.png" alt="Pampa Trash" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./media/Frames/RIA 2 1.png" alt="RIA 2" class="d-block w-100">
+                        <img src="./media/Frames Slideshow/Slideshow07.png" alt="RIA 2" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./media/Frames/Portada Guada backstage.png" alt="Guada backstage"
+                        <img src="./media/Frames Slideshow/Slideshow08.png" alt="Guada backstage"
                             class="d-block w-100">
                     </div>
                 </div>
